# BAP-GT-TOUCH

./: .gitignore  CMakeLists.txt  README.md  merge_bin.sh  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
.devcontainer/: devcontainer.json
.github/workflows/: build-release.yml
components/lvgl__lvgl/: lv_conf.h
components/lvgl__lvgl/demos/widgets/: lv_demo_widgets.c
main/: CMakeLists.txt  Nevan_RUS_96.c  angelwish_96.c  bap.h  bap_client.c  bap_client.h  bap_parser.c  bap_parser.h  bap_protocol.c  bap_protocol.h  bap_uart.c  bap_uart.h  block.c  block.h  brightness_control_api.md  clock-solid-full.c  clock.c  clock.h  cube-solid-full.c  cubes-solid-full.c  custom_fonts.h  fa_clock_18.c  home.c  home.h  idf_component.yml  loading.c  loading.h  lvgl_port.c  lvgl_port.h  main.c  mempool.c  mempool.h  montserrat_120.c  montserrat_140.c  night.c  night.h  ota_screen.c  ota_screen.h  ota_update.c  ota_update.h  (+9 more)
main/assets/: fan.c  fan.h  logo_background.c  lvgl_logo.c  star.c  star.h  temperature_icon.c  temperature_icon.h
